# portfolio-analyzer

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  portfolio-analyzer.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/application/: interfaces.py  use_cases.py
backend/domain/: calculations.py  entities.py
backend/infrastructure/: price_fetcher.py  ticker_search.py
backend/presentation/: router.py  schemas.py
frontend/: .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.claude/agents/: forest-ui-designer.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BacktestCharts.tsx  PortfolioForm.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx
frontend/src/lib/: api.ts  utils.ts
